// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/workers/package/docker getPackageUpdates adds digest 1`] = `
Array [
  Object {
    "isPin": true,
    "newDigest": "sha256:one",
    "newDigestShort": "one",
    "newFrom": "some-dep:1.0.0-something@sha256:one",
    "newTag": "1.0.0-something",
    "type": "pin",
  },
  Object {
    "isMinor": true,
    "newDepTag": "some-dep:1.1.0-something",
    "newDigest": undefined,
    "newFrom": "some-dep:1.1.0-something@undefined",
    "newTag": "1.1.0-something",
    "newVersion": "1.1.0-something",
    "newVersionMajor": "1",
    "type": "minor",
  },
]
`;

exports[`lib/workers/package/docker getPackageUpdates ignores unstable upgrades 1`] = `
Array [
  Object {
    "isMajor": true,
    "newDepTag": "node:8",
    "newFrom": "node:8",
    "newTag": "8",
    "newVersion": "8",
    "newVersionMajor": "8",
    "type": "major",
  },
]
`;

exports[`lib/workers/package/docker getPackageUpdates returns major and minor upgrades 1`] = `
Array [
  Object {
    "isMinor": true,
    "newDepTag": "some-dep:1.2.0",
    "newDigest": "sha256:one",
    "newFrom": "some-dep:1.2.0@sha256:one",
    "newTag": "1.2.0",
    "newVersion": "1.2.0",
    "newVersionMajor": "1",
    "type": "minor",
  },
  Object {
    "isMajor": true,
    "newDepTag": "some-dep:2.0.0",
    "newDigest": "sha256:two",
    "newFrom": "some-dep:2.0.0@sha256:two",
    "newTag": "2.0.0",
    "newVersion": "2.0.0",
    "newVersionMajor": "2",
    "type": "major",
  },
  Object {
    "isMajor": true,
    "newDepTag": "some-dep:3.0.0",
    "newDigest": "sha256:three",
    "newFrom": "some-dep:3.0.0@sha256:three",
    "newTag": "3.0.0",
    "newVersion": "3.0.0",
    "newVersionMajor": "3",
    "type": "major",
  },
]
`;

exports[`lib/workers/package/docker getPackageUpdates returns only one major 1`] = `
Array [
  Object {
    "isMinor": true,
    "newDepTag": "some-dep:1.2.0",
    "newDigest": "sha256:one",
    "newFrom": "some-dep:1.2.0@sha256:one",
    "newTag": "1.2.0",
    "newVersion": "1.2.0",
    "newVersionMajor": "1",
    "type": "minor",
  },
  Object {
    "isMajor": true,
    "newDepTag": "some-dep:3.0.0",
    "newDigest": "sha256:two",
    "newFrom": "some-dep:3.0.0@sha256:two",
    "newTag": "3.0.0",
    "newVersion": "3.0.0",
    "newVersionMajor": "3",
    "type": "major",
  },
]
`;

exports[`lib/workers/package/docker getPackageUpdates returns only one upgrade 1`] = `
Array [
  Object {
    "isMajor": true,
    "newDepTag": "some-dep:3.0.0",
    "newDigest": "sha256:one",
    "newFrom": "some-dep:3.0.0@sha256:one",
    "newTag": "3.0.0",
    "newVersion": "3.0.0",
    "newVersionMajor": "3",
    "type": "major",
  },
]
`;

exports[`lib/workers/package/docker getPackageUpdates returns only one upgrade if automerging major 1`] = `
Array [
  Object {
    "isMajor": true,
    "newDepTag": "some-dep:3.0.0",
    "newDigest": "sha256:one",
    "newFrom": "some-dep:3.0.0@sha256:one",
    "newTag": "3.0.0",
    "newVersion": "3.0.0",
    "newVersionMajor": "3",
    "type": "major",
  },
]
`;

exports[`lib/workers/package/docker getPackageUpdates upgrades from unstable to stable 1`] = `
Array [
  Object {
    "isMajor": true,
    "newDepTag": "node:8",
    "newFrom": "node:8",
    "newTag": "8",
    "newVersion": "8",
    "newVersionMajor": "8",
    "type": "major",
  },
]
`;

exports[`lib/workers/package/docker getPackageUpdates upgrades from unstable to unstable if not ignoring 1`] = `
Array [
  Object {
    "isMajor": true,
    "newDepTag": "node:9",
    "newFrom": "node:9",
    "newTag": "9",
    "newVersion": "9",
    "newVersionMajor": "9",
    "type": "major",
  },
]
`;
